Bug 243449 - Clicking a link relevant to the current track shows all information columns
Summary: Clicking a link relevant to the current track shows all information columns
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.5 (KDE 4.5)
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-02 17:06 UTC by Marcus Harrison
Modified: 2011-06-03 22:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcus Harrison 2010-07-02 17:06:12 UTC
Version:           3.5 (KDE 4.5) (using Devel) 
OS:                Linux

When a current track is playing, e.g. "Track 1" on "Album 1" by "Artist 1", "Album 1" and "Artist 1" become clickable links under the currently playing track to filter the playlist to only that artist/album. However, clicking one of these links shows all information columns in the playlist view, even previously hidden ones. Clicking the link again hides the previously hidden columns again, but they shouldn't show at all.

Reproducible: Always




OS: Linux (i686) release 2.6.32-23-generic
Compiler: cc
Comment 1 Γιώργος Κυλάφας (Giorgos Kylafas) 2011-06-01 16:48:34 UTC
SVN commit 1234560 by kylafas:

juk: show only the selected columns in new playlists.

Whenever a new playlist was created (e.g. "File->New->Empty Playlist", a
DynamicPlaylist is created etc.), all the available columns were shown
instead of only those that the user had selected.

The problem was that slotInitialize() (which adds all the columns to the
playlist) was called _after_ Playlist::SharedSettings::apply() (which
sets the visible and hidden columns).

So, make sure slotInitialize() is called during the Playlist ctor.

This commit is against trunk.
CCBUG: 243449

 M  +4 -1      playlist.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1234560
Comment 2 Γιώργος Κυλάφας (Giorgos Kylafas) 2011-06-03 15:58:52 UTC
Commit http://websvn.kde.org/?view=rev&revision=1234940 fixes this for KDE SC 4.6.5. I unfortunately do not have the permissions to mask this bug as fixed. :-)